--- a/proyectov2.html
+++ b/proyectov2.html
@@ -221,6 +221,8 @@
        let expresion = prompt('Ingrese la expresion');
        console.log(Arbol.agregar(expresion));
       [post, pre] = Arbol.expresion(expresion);
+         console.log("Preorder: "+pre);
+         console.log("Postorder: "+post);
         console.log(Arbol.resPreOrder(pre));
         console.log(Arbol.resPostOrder(post));
     </script>
